Move TranscriptWindowEntry into a separate org.jivesoftware.spark.ui.transctipt package
Assume that Emoji packs always available